fix(ride): fix routes broken logic
